# logic-paint-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.nu  flake.nix  index.html  netlify.toml  rust-toolchain.toml  sample_api_usage.ts  thinking.md  thinking.txt
.cargo/: config.toml
common/: Cargo.toml
common/src/: canvas_old.rs  input.rs  lib.rs
common/src/canvas/: bundle.rs  canvas.rs  cell.rs  data.rs  drawing.rs  graph.rs  input.rs  mod.rs  plugin.rs
common/src/render/: bundle.rs  mod.rs  pipeline.rs  plugin.rs  rasterizer.rs  sprite_texture_data.rs
common/src/sim/: atom.rs  graph.rs  mod.rs  network.rs  path.rs
common/src/utils/: hilbert.rs  mod.rs  spatial_query.rs  unwrap.rs
core/: Cargo.toml  index.html
core-plugin/: Cargo.toml
core-plugin/src/: lib.rs
core/src/: coords.rs  lib.rs  main.rs  template_app.rs  template_app_copy.rs
core/src/dom/: dom_interval_hooks.rs  module_mount.rs  raw_input.rs
core/src/gui/: demo_ui.rs  el.rs  node.rs  widget.rs
core/src/gui/types/: alignment.rs  border.rs  layout.rs  mod.rs  point.rs  rect.rs  render_op.rs
core/src/modules/: memory.rs  mod.rs
core/src/original_crate_src/dom/: raw_input.rs
core/src/original_crate_src/viewport/: input.rs
core/src/original_crate_src/wgl2/: cell_program.rs
core/src/shaders/: cell.vert
core/src/utils/: cell_offset.rs  local_cell_offset.rs  log.rs  mod.rs  standard_pin.rs
core/src/viewport/: blueprint.rs  buffer_mask.rs  compiler.rs  label_builder.rs
core/src/wgl2/: camera.rs  render_context.rs  uniform.rs
core/templates/: font_file.lpbp
crate/: Cargo.toml
crate/src/: blueprint.rs  brush.rs  buffer.rs  buffer_mask.rs  compiler.rs  coords.rs  execution_context.rs  input.rs  lib.rs  logic_paint.rs  range.rs  session.rs  upc.rs  viewport.rs
crate/src/dom/: mod.rs  module_mount.rs  raw_input.rs
crate/src/gui/: demo_ui.rs  el.rs  label.rs  layout_node.rs  mod.rs  node.rs  sizing.rs  widget.rs
crate/src/modules/: clock.rs  const_value.rs  memory.rs  mod.rs  module_data.rs  module_serde.rs  pin.rs  probe.rs  register.rs  toggle_pin.rs  value.rs
crate/src/original_crate_src/: lib.rs
crate/src/shaders/: cell.frag
crate/src/substrate/: placement.rs
crate/src/utils/: input.rs  iter.rs  mod.rs  selection.rs  standard_pin.rs
crate/src/viewport/: brush.rs  buffer.rs  buffer_mask.rs  compiler.rs  editor_state.rs  execution_context.rs  input.rs  label_builder.rs  mod.rs
crate/src/wgl2/: camera.rs  cell_program.rs  render_context.rs
crate/templates/: font_file.lpbp
dev_site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  webpack.config.js
dev_site/src/: index.ts  main.ts
js-sys/: index.html  package-lock.json  package.json  vite.config.ts
js-sys/src/: lib.ts
js-sys/src/dev/: main.ts
lc3b/: Cargo.toml
lc3b/src/: main.rs
misc/: cpu.lpbp
native/: Cargo.toml
native/assets/shaders/: cell.frag  cell.vert
native/src/: main.rs
native/src/shaders/: cell.frag
pkg/: logic_paint_rs.d.ts  logic_paint_rs.js  logic_paint_rs_bg.wasm  logic_paint_rs_bg.wasm.d.ts  package.json
samples/: README.md  alu.lpbp  alu.lpm.json  components.lpbp  components.lpm.json  cpu.lpbp  cpu.lpm.json  example.lpbp  example.lpm.json  font_file.lpbp  gates.lpbp  gates.lpm.json  register_file.lpbp  register_file.lpm.json  rom.lpbp
src/: blueprint.rs  brush.rs  buffer.rs  buffer_mask.rs  canvas.rs  compiler.rs  coords.rs  editor.rs  execution_context.rs  gloo_test.rs  input.rs  lib.rs  logic_paint.rs  logic_paint_context.rs  main.rs  mod.rs  module.rs  project.rs  range.rs  render_context.rs  session.rs  socket.rs  std_editor.rs  tools.rs  upc.rs  viewport.rs  yew_viewport.rs
src/dom/: dom_interval_hooks.rs  element_event_hooks.rs  mod.rs  module_mount.rs  raw_input.rs  yew_viewport.rs
src/modules/: clock.rs  memory.rs  mod.rs  module_data.rs  module_mount.rs  register.rs  test_one.rs  test_two.rs  toggle_pin.rs  value.rs
src/render/: bundle.rs  cell.frag  pipeline.rs  plugin.rs  rasterizer.rs
src/shaders/: cell.frag  cell.vert
src/sim/: atom.rs  graph.rs  mod.rs  path.rs  simulation.rs
src/substrate/: atom.rs  buffer.rs  buffer_brush.rs  buffer_delta.rs  buffer_serde.rs  cell.rs  codec.rs  compiler.rs  compress.rs  execution_context.rs  input.rs  integrated_circuit.rs  io.rs  label_builder.rs  mask.rs  mod.rs  normalized_cell.rs  pin.rs  pin_module.rs  placement.rs  serializer.rs
src/substrate/buffer_serde/: serde_v1.rs  serde_v2.rs
src/substrate_v2/: blueprint.rs  buffer.rs  coords.rs  mod.rs  module.rs  range.rs  upc.rs
src/tools/: camera_controller.rs  draw_metal.rs  draw_si.rs  mod.rs  place_socket.rs  trait_based.rs  visual.rs
src/utils/: chunked_cell_lookup.rs  chunked_hashmap.rs  convert.rs  dirs.rs  log.rs  mod.rs  names.rs  selection.rs  spatial_query.rs  standard_pin.rs
src/v2/: blueprint.rs  buffer.rs  coords.rs  mod.rs  module.rs  render_chunk.rs  render_context.rs  session.rs  viewport.rs
src/viewport/: buffer.rs  buffer_brush.rs  buffer_serde.rs  compiler.rs  execution_context.rs  input.rs  label_builder.rs  mask.rs  mod.rs
src/wgl2/: camera.rs  cell_chunk_texture.rs  cell_program.rs  cell_render_chunk.rs  mod.rs  quad_vao.rs  render_context.rs  texture.rs  uniform.rs
vscode_extension/: README.md  logic-paint-0.0.1.vsix  package.json  tsconfig.json  vite.config.ts
vscode_extension/exampleFiles/: example.lpbp  example.lpm.json  lp-modules.json
vscode_extension/media/: logic_paint_blueprint.css
wasm/: Cargo.toml  index.html
wasm/src/: canvas_viewport.rs  input.rs  lib.rs  main.rs  substrate_render_chunk.rs  viewport.rs
wasm/src/dom/: element_event_hooks.rs
wasm/src/shaders/: cell.frag  cell_orig.vert
wasm/src/sim/: atom.rs  graph.rs  network.rs  path.rs
wasm/src/substrate/: cell.rs  integrated_circuit.rs
wasm/src/utils/: log.rs  mod.rs
wasm/src/wgl2/: camera.rs  cell_chunk_texture.rs  cell_program.rs  cell_texture.rs  mod.rs  quad_vao.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
web/src/: main.ts  types.d.ts
(+21 files in other folders)
