[package]
name = "logic-paint-rs"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
description = "A logic simulation library written in Rust, inspired by KOHCTPYKTOP."
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/athilenius/logic-paint-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
base64 = "0.22"
bincode = "1.3.1"
console_error_panic_hook = { version = "0.1", optional = true }
enum_dispatch = "0.3"
futures = "0.3"
generational-arena = "0.2"
glam = { git = "https://github.com/athilenius/glam-rs", default-features = false, features = ["serde", "bytemuck", "wasm-bindgen"] }
gloo = "0.11"
im = { version = "15.1", features = ["serde"] }
itertools = "0.13"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
tsify = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.19.3"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "MessageChannel",
  "MessagePort",
  "MouseEvent",
  "Storage",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WheelEvent",
  "Window",
  "console",
]
