[package]
name = "logic-paint-rs"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
description = "A logic simulation library written in Rust, inspired by KOHCTPYKTOP."
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/athilenius/logic-paint-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
base64 = "0.22"
bincode = "2.0.0-rc.3"
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.3"
glam = { git = "https://github.com/athilenius/glam-rs", default-features = false, features = ["serde", "bytemuck", "wasm-bindgen"] }
im = { version = "15.1", features = ["serde"] }
itertools = "0.13"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
snap = "1.1"
thiserror = "1.0"
tsify = "0.4"
wasm-bindgen = "=0.2.95"
wasm-bindgen-futures = "0.4"
wasm_thread = { version = "0.3" }

[dev-dependencies]
brotli = "7.0.0"
flate2 = "1.0.34"
tiff = "0.9.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlCanvasElement",
  "KeyboardEvent",
  "MouseEvent",
  "Performance",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WheelEvent",
  "Window",
  "console",
]

[profile.profiling]
inherits = "release"
strip = true
opt-level = 3
lto = true
panic = "abort"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
