[package]
name = "common"
version = "0.1.0"
edition = "2018"

[features]
default = [
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/bevy_wgpu",
]

web = [
  "bevy/bevy_winit",
  "bevy/render",
]

[dependencies]
bevy = { version="0.5", default-features=false }
fast_hilbert = "1.0"
im = { version = "15.0", features = ["serde"] }
shrinkwraprs = "0.3"
smallvec = "1.6"
