[package]
name = "core-plugin"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/athilenius/logic-paint-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
core = { path = "../core" }

[dependencies.web-sys]
version = "0.3.55"
features = ["MessagePort", "MessageEvent"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 's'
