[package]
name = "core"
version = "0.1.0"
authors = ["Alec Thilenius <alec@thilenius.com>"]
description = "A logic simulation library written in Rust, inspired by KOHCTPYKTOP."
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/athilenius/logic-paint-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bincode = "1.3.1"
console_error_panic_hook = { version = "0.1.6", optional = true }
eframe = { version = "0.22.0", default-features = false, features = [ "default_fonts", "glow" ] }
js-sys = "0.3.55"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "KeyboardEvent",
  "MessageChannel",
  "MessagePort",
  "MouseEvent",
  "Storage",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WheelEvent",
  "Window",
  "console",
]
