[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
glam = { version = "0.18.0", features = ["serde", "bytemuck"] }
js-sys = "0.3.55"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
  "console"
]
