[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
glam = { version = "0.19.0", features = ["serde", "bytemuck"] }
js-sys = "0.3.55"
smallvec = "1.7"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.55"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "MessageChannel",
  "MessagePort",
  "MouseEvent",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
  "console",
]
